[gd_scene load_steps=3 format=3 uid="uid://c7p1t4jn8nriu"]

[ext_resource type="Script" path="res://modules/player_controller/control_manager/control_manager.gd" id="1_5uxpw"]

[sub_resource type="Theme" id="Theme_3cenb"]

[node name="ControlManager" type="CanvasLayer"]
script = ExtResource("1_5uxpw")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 3

[node name="XR" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_3cenb")
text = "VR Mode"

[node name="FirstPerson" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_3cenb")
text = "FPS Mode"

[node name="ThirdPerson" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_3cenb")
text = "TPS Mode"

[connection signal="pressed" from="Panel/HBoxContainer/XR" to="." method="launch_xr_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/FirstPerson" to="." method="launch_fps_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ThirdPerson" to="." method="launch_tps_button_pressed"]
